--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,7 @@ body {
     flex-direction: column;
     margin-top: 145px;
     flex-wrap: wrap;
+    margin-bottom: 115px;
 }
 
 .service-header {
@@ -293,6 +294,179 @@ body {
     padding-top: 10px;
 }
 
-.service-list li{
+.service-list li {
     width: calc(100%/6);
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: #333333;
+
+    position: relative;
+    margin-top: 97px;
+}
+
+.service-list li::before {
+    content: '';
+    position: absolute;
+    top: -90px;
+    left: 50%;
+    z-index: 1;
+    margin-left: -33px;
+
+    display: block;
+    width: 65px;
+    height: 65px;
+
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.service-one::before {
+    background-image: url(../img/steak.svg);
+}
+
+.service-two::before {
+    background-image: url(../img/cereal.svg);
+}
+
+.service-three::before {
+    background-image: url(../img/pizza.svg);
+}
+
+.service-four::before {
+    background-image: url(../img/burger.svg);
+}
+
+.service-five::before {
+    background-image: url(../img/cupcake.svg);
+}
+
+.service-six::before {
+    background-image: url(../img/vegetable.svg);
+}
+
+.features {
+    background: url(../img/feature-bcg.jpg) center no-repeat;
+    background-size: cover;
+}
+
+.features-inner {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: relative;
+}
+
+.feature-content {
+    width: 100%;
+    max-width: 540px;
+    text-align: left;
+    padding-top: 135px;
+    padding-bottom: 220px;
+}
+
+.feature-header {
+    max-width: 300px;
+    margin-bottom: 25px;
+}
+
+.text {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 23px;
+    color: #c5c5c5;
+}
+
+.title-white {
+    color: #ffffff;
+}
+
+.feature-link {
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 700;
+    color: #4f4a37;
+    text-transform: uppercase;
+    background-color: #fcdb5a;
+    text-align: center;
+    padding-top: 15px;
+    margin-top: 32px;
+
+    display: inline-block;
+    width: 159px;
+    height: 54px;
+    border: 1px solid #fcdb5a;
+    border-radius: 25px;
+}
+
+.features-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+
+    position: absolute;
+    bottom: -305px;
+    left: 0;
+    z-index: 1;
+}
+
+.features-list li {
+    width: calc(100% / 2);
+    height: auto;
+    background-color: #fff;
+}
+
+.feature-item {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid transparent;
+}
+
+.feature-text {
+    width: 100%;
+    color: #333333;
+}
+
+.subtitle-black {
+    font-family: 'Raleway', sans-serif;
+    color: #333333;
+    font-weight: 700;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+}
+
+.text-black {
+    color: #333333;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+}
+
+.feature-img {
+    display: block;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+.feature-img-one {
+    background-image: url(../img/feature1.jpg);
+}
+
+.feature-img-two {
+    background-image: url(../img/feature2.jpg);
+}
+
+.feature-img-three {
+    background-image: url(../img/feature3.jpg);
+}
+
+.feature-img-four {
+    background-image: url(../img/feature4.jpg);
 }
