--- a/css/style.css
+++ b/css/style.css
@@ -495,3 +495,50 @@ body {
     line-height: 0.8;
     padding-top: 125px;
 }
+
+.progress-inner {
+    display: flex;
+    flex-direction: column;
+    padding-top: 130px;
+    padding-bottom: 120px;
+}
+
+.progress-header {
+    width: 100%;
+    max-width: 560px;
+    margin: 0 auto 60px;
+    text-align: center;
+}
+
+.progress-list {
+    display: flex;
+   justify-self: end;
+}
+
+.progress-list li {
+    width: calc(100%/4);
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: #333333;
+
+    position: relative;
+}
+
+.count {
+    font-family: "Gilroy", sans-serif;
+    font-size: 50px;
+    line-height: 1;
+    font-weight: 900;
+
+    margin: 0;
+}
+
+.progress-item {
+    display: flex;
+}
+
+.progress-text {
+    width: 100%;
+    padding-left: 20px;
+}
