--- a/css/style.css
+++ b/css/style.css
@@ -629,7 +629,7 @@ body {
     font-weight: 700;
     font-style: italic;
     color: #fcdb5a;
-    top: 0;
+    top: 10px;
     left: 0;
     z-index: 2;
 }
@@ -637,14 +637,103 @@ body {
 .subtitle-white {
     color: #ffffff;
 }
+.review-text p {
+    margin: 0;
+}
 
 .review-author {
     display: flex;
+    flex-wrap: wrap;
     padding-left: 90px;
     color: #ffffff;
+    padding-top: 15px;
 }
 
 .review-name {
     font-weight: 700;
     padding-left: 15px;
+}
+
+.blog-header {
+    width: 100%;
+    max-width: 560px;
+    margin: 0 auto 60px;
+    text-align: center;
+}
+
+.blog-inner {
+    display: flex;
+    flex-direction: column;
+flex-wrap: wrap;
+
+    padding-top: 130px;
+    padding-bottom: 80px;
+}
+
+.blog-posts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.blog-post {
+    position: relative;
+}
+
+.blog-date {
+    flex-direction: column;
+    background-color: #fde557;
+    text-align: center;
+    width: 61px;
+    height: 65px;
+    border: 1px solid transparent;
+
+    position: absolute;
+    top: 0;
+    left: 30px;
+    z-index: 3;
+}
+
+.date-number {
+    font-family: "Gilroy", sans-serif;
+    font-size: 25px;
+    font-weight: 900;
+    color: #333333;
+    margin: 0;
+    padding-top: 10px;
+}
+
+.date-mounth {
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    color: #9a8841;
+    font-weight: 700;
+    margin: 0;
+}
+
+.blog-title {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 23px;
+    color: #ddc051;
+    text-transform: uppercase;
+}
+
+.blog-description {
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    color: #ffffff;
+    font-weight: 700; 
+}
+
+.blog-text {
+    position: absolute;
+    bottom: 25px;
+    left: 30px;
+    z-index: 2;
+}
+
+.blog-text p {
+    margin: 0;
 }
