Последняя версия сайта

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
 }
 
 .btn:hover {
-    background-color: #f9f9f9;
+    background-color: #f9f9f9c0;
 }
 
 .intro {
@@ -402,6 +402,10 @@ body {
     border-radius: 25px;
 }
 
+.feature-link:hover {
+    background-color: #ddb410;
+}
+
 .about {
     width: 100%;
     min-height: 473px;
@@ -658,7 +662,6 @@ body {
     line-height: 30px;
     position: relative;
     padding-left: 90px;
-
 }
 
 .review-text::before {
@@ -669,7 +672,7 @@ body {
     font-weight: 700;
     font-style: italic;
     color: #fcdb5a;
-    top: 10px;
+    top: 20px;
     left: 0;
     z-index: 2;
 }
@@ -679,6 +682,7 @@ body {
 }
 .review-text p {
     margin: 0;
+    padding-top: 10px;
 }
 
 .review-author {
@@ -686,12 +690,69 @@ body {
     flex-wrap: wrap;
     padding-left: 90px;
     color: #ffffff;
-    padding-top: 15px;
+    padding-top: 40px;
 }
 
 .review-name {
     font-weight: 700;
     padding-left: 15px;
+}
+
+.review-slider-wrapper {
+    position: relative;
+}
+
+.slider {
+    height: inherit;
+	overflow: hidden;
+	position: relative;
+	width: inherit;
+}
+
+.slides {
+    height: inherit;
+	position: absolute;
+	width: inherit;
+}
+
+.navigation {
+    display: flex;
+    position: absolute;
+    right: 0;
+    bottom: 40px;
+}
+
+.bar {
+    width: 12px;
+    height: 12px;
+    border: 1px solid #585858;
+    border-radius: 50%;
+    background-color: transparent;
+    margin-right: 15px;
+    cursor: pointer;
+
+    transition: all 0.2s ease;
+}
+
+.bar:hover {
+    background-color: #fcdb5a;
+    transform: scale(1.1);
+}
+
+input[name="radio-btn"] {
+    visibility: hidden;
+}
+
+#radio-btn-one:checked ~ .slide-one {
+    margin-left: 0;
+}
+
+#radio-btn-two:checked ~ .slide-one {
+    margin-left: -33.3333%;
+}
+
+#radio-btn-three:checked ~ .slide-one {
+    margin-left: -66.66666%;
 }
 
 .blog-header {
@@ -776,10 +837,18 @@ body {
     bottom: 25px;
     left: 30px;
     z-index: 2;
+
+    display: flex;
+    flex-direction: column;
 }
 
-.blog-text p {
+.blog-text a {
     margin: 0;
+    cursor: pointer;
+}
+
+.blog-text a:hover {
+    text-decoration: underline;
 }
 
 .partners-inner {
